--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,8 +4,24 @@
     <meta charset="utf-8">
     <title>Unit 4, Part 2: HTML/CSS Practice</title>
     <!-- Create and link a CSS file! -->
+    <link href="style.css" rel="stylesheet"/>
   </head>
+
   <body>
-    <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+    <header>
+      <p>
+        <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+      </p>
+    </header>
+
+<div class="info">
+<h2> My name is Glonel Dimapilis</h2>
+</div>
+<img src="hondacrosstourprime.png" alt="Honda Crosstour">
+<h3>I drive a Honda Crosstour. The 2015 Honda Crosstour is 
+  a decently sized sedan, bigger than your average 2015 
+  sedan yet smaller than an SUV, and 100% good enough for 
+  my needs.</h3>
+
   </body>
 </html>
